--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -298,19 +298,19 @@
             </div>
             <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/overview.html" class="stretched-link">Authorize a representative</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/tax/representative-authorization/overview.html" class="stretched-link">Authorize a representative</a></h3>
                 <p>Who can be a representative, your responsibilities, levels of access you can give, ways to authorize</p>
               </div>
             </div>
 		   <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html" class="stretched-link">Confirm an authorization request</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html" class="stretched-link">Confirm an authorization request</a></h3>
                 <p>How to verify authorization requests submitted by representatives using the CRA's accounts</p>
               </div>
             </div>
 		   <div class="col-sm-6 col-md-4 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/cancel.html" class="stretched-link">Cancel a representative's authorization</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/tax/representative-authorization/cancel.html" class="stretched-link">Cancel a representative's authorization</a></h3>
                 <p>How to cancel your representative's authorization</p>
               </div>
             </div>
