--- a/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html
+++ b/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html
@@ -332,7 +332,7 @@
 </ul>
 <div class="clearfix">&nbsp;</div>		      
 		      
-		   <!--   <p>Learn more about using a BN or GroupID: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html">Set up a business or GroupID in Represent a Client (RAC)</a></p>-->
+		   <!--   <p>Learn more about using a BN or GroupID: <a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html">Set up a business or GroupID in Represent a Client (RAC)</a></p>-->
 			<!--They will need to log in to their My Account or My Business Account and enter your <a class="wb-lbx" role="button" aria-controls="repID" href="#repID">representative <span class="nowrap">identifier<sup><span class="mrgn-lft-xs far fa-question-circle"></span></sup></span></a>.</p>-->
                 <section id="repID" class="mfp-hide modal-dialog modal-content overlay-def">
                   <header class="modal-header">
@@ -350,7 +350,7 @@
               </li>
               <li>
                 <h3>Your client authorizes you</h3>
-                <p>Your client, friend or family member must access their CRA account and enter your RepID, BN or GroupID to <a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html">confirm your authorization request</a>.</p>
+                <p>Your client, friend or family member must access their CRA account and enter your RepID, BN or GroupID to <a href="/sign-in-test/en/revenue-agency/services/e-services/tax/representative-authorization/confirm-representative.html">confirm your authorization request</a>.</p>
 		      <p>Once they have signed in to their account and entered the number you gave them, you will have access to their information through your RAC account.</p>
               </li>
             </ol>
@@ -442,7 +442,7 @@
       <p>Rescue to groupID content</p>-->
 
 	<h2>Authorization process for Represent a Client</h2>
-	<p>Learn more about the process for becoming authorized to access someone else's account: <a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization.html">Representative authorization</a></p>
+	<p>Learn more about the process for becoming authorized to access someone else's account: <a href="/sign-in-test/en/revenue-agency/services/e-services/tax/representative-authorization.html">Representative authorization</a></p>
 </div>
 
 
