--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
@@ -330,7 +330,7 @@
 
       <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script>
 <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
-<script src="https://cdn.botframework.com/botframework-webchat/4.9.1/webchat-es5.js"></script>
+<script src="https://gc-proto-cra.github.io/js/alpha-banner.js"></script>
 
 
 
