--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-your-address.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-your-address.html
@@ -678,6 +678,6 @@ Update your CRA information: Change your address</h1>
 
 
 
-<script src="https://gc-proto-cra.github.io/js/alpha-banner.js"></script></body>
+<script src="https://cra-proto.github.io/sign-in-test/alpha-banner.js"></script></body>
 </html>
 
