--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
@@ -499,7 +499,7 @@
 
       <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script>
 <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
-<script src="https://gc-proto-cra.github.io/js/alpha-banner.js"></script>
+<script src="https://cra-proto.github.io/sign-in-test/alpha-banner.js"></script>
 
 
 
