--- a/404.html
+++ b/404.html
@@ -35,10 +35,11 @@
 <script>dataLayer1 = [];</script> 
 <!-- End Google Tag Manager -->
 <style>
-h1#wb-cont::after {
-    margin-left: auto;
-    margin-right: auto;
+h1#wb-cont {
+    border-image: linear-gradient(to right, transparent 0%, transparent 45%, #af3c43 45%, #af3c43 55%, transparent 55%, transparent 100%);
+
 }
+
 .middle-page {
     margin-top: 10%;
 }
