--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
 <style>
 h1#wb-cont {
     border-image: linear-gradient(to right, transparent 0%, transparent 45%, #af3c43 45%, #af3c43 55%, transparent 55%, transparent 100%);
-
+    border-image-slice: 1;
 }
 
 .middle-page {
