--- a/en/revenue-agency/corporate/contact-information.html
+++ b/en/revenue-agency/corporate/contact-information.html
@@ -573,7 +573,7 @@ background-color: #26384a !important
  </div>
  <div class="col-md-4">
  <section>
- <h3 class="h5"> <a href="/sign-in-test/en/revenue-agency/services/about-canada-revenue-agency-cra/direct-deposit.html">Direct deposit and banking</a> </h3>
+ <h3 class="h5"> <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html">Direct deposit and banking</a> </h3>
  </section>
  </div>
  <div class="col-md-4">
