--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -378,7 +378,7 @@
     </div>
   </section>
   <hr class="brdr-bttm">
-  <p><span class="fas fa-phone fa-flip-horizontal fa-2x fa-pull-left mrgn-rght-sm"></span>If you cannot find what you are looking for, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a> for assistance.</p>
+  <p><span class="fas fa-phone fa-flip-horizontal fa-2x fa-pull-left mrgn-rght-sm"></span>If you cannot find what you are looking for, <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html">contact the CRA</a> for assistance.</p>
   
   <!-- <p>List of guides and help</p>
   <ul>
