--- a/en/revenue-agency/services/e-services/represent-a-client/aboutrac.html
+++ b/en/revenue-agency/services/e-services/represent-a-client/aboutrac.html
@@ -573,7 +573,7 @@ About Represent a Client</h1>
     <li><span class="nowrap">Friday, May 10, 2024</span> to <span class="nowrap">Monday, May 13, 2024</span></li>
     <li><span class="nowrap">Friday, October 18, 2024</span> to <span class="nowrap">Monday, October 21, 2024</span></li>
   </ul>
-<p>If you require any of these services during these times, please <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>	  
+<p>If you require any of these services during these times, please <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>	  
 
 <h3>Browser requirements</h3>
 	  
