--- a/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html
+++ b/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html
@@ -348,7 +348,7 @@ About My Account</h1>
 	<p>If you want to sign in to My Account on behalf of someone else (including friends and family members), you must use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a> to access their information.</p>
 	
 <h3>My Account of a deceased person</h3>
-	<p>You <strong>cannot</strong> use the CRA accounts to access information for deceased persons, unless you are that person's representative. If not, you will have to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us</a>. </p>
+	<p>You <strong>cannot</strong> use the CRA accounts to access information for deceased persons, unless you are that person's representative. If not, you will have to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us</a>. </p>
 	<p>Representatives (for example, an executor) can access My Account on behalf of a deceased person using <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.
 	
 	<h2 id="section3">Sign-in options</h2>
@@ -672,7 +672,7 @@ About My Account</h1>
     <li><span class="nowrap">Friday, May 10, 2024</span> to <span class="nowrap">Monday, May 13, 2024</span></li>
     <li><span class="nowrap">Friday, October 18, 2024</span> to <span class="nowrap">Monday, October 21, 2024</span></li>
   </ul>
-<p>If you require any of these services during these times, please <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>	  
+<p>If you require any of these services during these times, please <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>	  
 
 <h3>Browser requirements</h3>
 	  
