--- a/en/revenue-agency/services/e-services/cra-login-services/securitycode.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/securitycode.html
@@ -336,7 +336,7 @@
 	
 		<h2 id="section2">CRA security code</h2>
 <p>If you can't use the <i>Interac</i> document verification service, you can choose to have a CRA security code mailed to you.</p>
-	<p>When you request a CRA security code, you will have to enter the postal code or ZIP code of your current mailing address. If your postal code doesn't match what we have on file, you will have to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to update your address.</p>
+	<p>When you request a CRA security code, you will have to enter the postal code or ZIP code of your current mailing address. If your postal code doesn't match what we have on file, you will have to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to update your address.</p>
 	<p>If you live outside Canada and the United States, your postal code or ZIP code is not required.</p>
 
 	<h3>Get your CRA security code</h3>
@@ -351,7 +351,7 @@
 <li>You entered your security code incorrectly too many times and got an error message that you have been locked out</li>
 
 </ul>
-	<p>If you are not able to use the <i>Interac</i> document verification service, or if you prefer to receive another CRA security code by mail, you can <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to get a new one.</p>
+	<p>If you are not able to use the <i>Interac</i> document verification service, or if you prefer to receive another CRA security code by mail, you can <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to get a new one.</p>
 	
 <h3>Get your CRA security code in an alternate format</h3>
 	<p>If you are visually impaired, you can get the CRA security code letter in an <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/help-forms-publications/about-multiple-formats.html">alternate format for persons with disabilities</a>.</p>
