--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
@@ -400,7 +400,7 @@
 		<div class="container">
 			<nav>
 				<h3>Canada Revenue Agency (CRA)</h3>
-				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3"><li><a href="/en/revenue-agency/corporate/contact-information.html">Contact the CRA</a></li><li><a href="/en/revenue-agency/corporate/about-canada-revenue-agency-cra.html">About the CRA</a></li><li><a href="/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance.html">Compliance and enforcement</a></li></ul>
+				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3"><li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html">Contact the CRA</a></li><li><a href="/en/revenue-agency/corporate/about-canada-revenue-agency-cra.html">About the CRA</a></li><li><a href="/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance.html">Compliance and enforcement</a></li></ul>
 			</nav>
 		</div>
 	</div>
