--- a/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html
@@ -223,7 +223,7 @@
     </dd>
     <dt>Option 2</dt>
     <dd><strong>Register with a new CRA user ID:</strong><br>
-    <p>You may need to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us</a> to register with a new CRA user ID and password. <!--When registering, ensure that your user ID is unique to your CRA account. To help avoid having your CRA user ID and password revoked in the future, your new user ID and password <strong>should not</strong>:</p>
+    <p>You may need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us</a> to register with a new CRA user ID and password. <!--When registering, ensure that your user ID is unique to your CRA account. To help avoid having your CRA user ID and password revoked in the future, your new user ID and password <strong>should not</strong>:</p>
    <ul>
      <li>Be similar to one that was previously revoked</li>
      <li>Contain any parts of your name</li>
@@ -256,10 +256,10 @@
       <h2 id="section8">Change your sign-in option</h2>
   <p>You must always sign in to your account with the option you registered with.</p>
 <p>If you registered with a CRA user ID and password and want to change your sign-in option, you can sign in to your account and revoke your credential so you can register with an <i>Interac</i> sign in partner instead.</p>
-  <p>You can also <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to revoke your credential so you can register again.</p>
+  <p>You can also <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to revoke your credential so you can register again.</p>
 
         <h2 id="section9">Locked account</h2>
-  <p>If you enter the wrong CRA user ID or password too many times, your account will become locked. If this happens, you will have to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to have your account unlocked.</p>
+  <p>If you enter the wrong CRA user ID or password too many times, your account will become locked. If this happens, you will have to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to have your account unlocked.</p>
 
   <!--  <h2 id="section4">Privacy and security</h2>
 <p>The CRA does not share your registration information with any third party. The information you provide is held by the CRA and is protected under the federal Privacy Act.</p>
