--- a/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
@@ -115,7 +115,7 @@
   
     <h3>Managing your online banking info</h3>
     <p>To revoke or change your banking user ID or password or manage your banking security questions, you should contact your financial institution for assistance.</p>
-    <p>If your bank gives you a new bank card with new numbers, you must <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to register again using the new card number.</p>
+    <p>If your bank gives you a new bank card with new numbers, you must <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to register again using the new card number.</p>
 	
     <h2 id="section3">Your privacy and <i>Interac</i> sign-in partners</h2>
     <p>When you use an <i>Interac</i> sign-in partner, the information you enter and the identity of your financial institution are not shared with the government service you are trying to access. Similarly, information about the government service being accessed is not shared with your financial institution. No personally identifying information or banking details are ever shared. </p>
@@ -126,7 +126,7 @@
   
   <h2 id="section4">Change your sign-in option</h2>
 	<p>You must always sign in to your account with the option you registered with.</p>
-<p>If you registered with an <i>Interac</i> sign-in partner and want to change your sign-in option, you can <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to revoke your credential so you can register with a CRA user ID and password instead.</p>
+<p>If you registered with an <i>Interac</i> sign-in partner and want to change your sign-in option, you can <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to revoke your credential so you can register with a CRA user ID and password instead.</p>
 	<h3>Switch your <i>Interac</i> sign-in partner</h3>
 	</p> You can switch your <i>Interac</i> sign-in partner as long as you still have access to your account.</p>
 	<ol class="">
