--- a/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html
@@ -147,7 +147,7 @@
 <!--  <p>You must enter a one-time passcode each time you sign in.</p> -->
 	<p>You can choose one or more of these options when you enroll. You can also choose additional methods later by signing in to your account and selecting <strong>Multi-factor authentication settings</strong> in your <strong>Profile</strong>.</p>
 		<p>The CRA will never call and ask for your one-time passcode over the telephone. You should never share your one-time passcode with anyone, including anyone calling or texting to request it.</p>
-  <p> If your account becomes locked due to entering the wrong passcode too many times, you will be temporarily locked out for 30 minutes. After that period, you can try again. If this happens 3 times, you will be permanently locked out, and will need to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
+  <p> If your account becomes locked due to entering the wrong passcode too many times, you will be temporarily locked out for 30 minutes. After that period, you can try again. If this happens 3 times, you will be permanently locked out, and will need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
 
   <h3 id="section5">Get your one-time passcode by telephone</h3>
   <p> If you choose to enroll with the telephone option, you will need to provide at least one cell or landline number. Each time you sign in, a new one-time passcode will be sent to the telephone number selected.</p>
@@ -221,7 +221,7 @@
 	  <li>Use the authenticator app if it is already set up</li>
    
   </ul>
-  <p>If you still can't receive your one-time passcode, you will have to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
+  <p>If you still can't receive your one-time passcode, you will have to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
   
   <!--p> If you select "Text me", the passcode will be sent by Short Messaging Service (SMS). <strong>Open the text message</strong> first, then use the passcode from the body of the message.</p>
   <p> If you select "Call me", you will receive a phone call from a toll-free number, and the passcode will be told to you in an automated message.</p-->
@@ -230,7 +230,7 @@
   <p> If you choose to enroll with a passcode grid, the system will generate a unique passcode grid for you. You will use this grid every time you sign in to your account, so you must either save it or print it.</p> 
 	<p>The passcode grid is a table made up of numbered rows and lettered columns, similar to a Bingo card. We will ask for combinations (for example, B,1; A,3) to create your one-time passcode. We will ask for 3 of these combinations each time you sign in. </p>
  <p>Your passcode grid will expire after 18 months. Before the expiry date, sign in to your account and generate a new one in <strong>Multi-factor authentication settings</strong>.
-	<p> If you lose your passcode grid or it expires, you will still be able to sign in if you have added the telephone or authenticator app option for MFA. If you have not, you will need to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>. </p>
+	<p> If you lose your passcode grid or it expires, you will still be able to sign in if you have added the telephone or authenticator app option for MFA. If you have not, you will need to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>. </p>
 
 		<h3 id="section7">Get your time-based one-time passcode with a third-party authenticator app</h3>
 		<p>If you choose to use a third-party authenticator app, you will need to download an app that is compatible with the CRA accounts. The app store offers many free third-party authenticator app options to choose from.</p>
@@ -253,7 +253,7 @@
 
 	<h2 id="section3">If you can't receive your one-time passcode</h2>
 	<p>If your phone number has changed and you can no longer receive your one-time passcode to that number, you can use another MFA option if you are <strong>already</strong> enrolled with that option.</p>
-	<p>If you don't have access to your old phone number and you are not enrolled with another MFA option, you will have to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
+	<p>If you don't have access to your old phone number and you are not enrolled with another MFA option, you will have to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p>
 	
 	<!--<h2 id="section3">Avoid getting locked out of your account</h2>
 	<p>Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app. When you sign in to your account, you can update your current MFA settings or enroll in additional MFA options.</p>
