--- a/en/revenue-agency/services/e-services/cra-login-services/locked-account.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/locked-account.html
@@ -300,7 +300,7 @@
 		<li>Security questions</li>
 		<li>CRA security code</li>
 	</ul>
-  <p>If your account becomes locked, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to have your account unlocked.</p>
+  <p>If your account becomes locked, <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to have your account unlocked.</p>
 
 		<h2 id="section2">Avoid getting locked out</h2>
  <p>Use the following strategies to avoid getting locked out of your account.</p>
