--- a/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html
@@ -303,7 +303,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.js"></script> 
   <script src="../src/list-inline-desktop.js"></script> 
-	<script src="https://github.com/cra-proto/sign-in-test/blob/main/alpha-banner.js"></script>
+	<script src="https://cra-proto.github.io/sign-in-test/alpha-banner.js"></script>
   <!-- Write closure template --> 
   <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
