--- a/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
@@ -203,5 +203,6 @@
 			document.write(wet.builder.refFooter({
 			}));
 		</script>
+	<script src="https://cra-proto.github.io/sign-in-test/alpha-banner.js"></script>
 </body>
 </html>
