--- a/en/revenue-agency/services/tax/representative-authorization/overview.html
+++ b/en/revenue-agency/services/tax/representative-authorization/overview.html
@@ -289,7 +289,7 @@ Authorize a representative: Overview</h1>
 <div class="alert alert-info">
 	<p><strong>New My Trust Account portal for representatives</strong></p>
 <p>The <abbr title="Canada Revenue Agency">CRA</abbr> has launched My Trust Account, a secure portal that lets legal and authorized representatives of trust accounts manage trust information online. You can securely access My Trust Account services through <span class="nowrap"><a href="/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></span>.</p>
-<p>For more information, go to <a href="/sign-in-test/en/revenue-agency/services/e-services/represent-a-client/help-trust-account/about-trust-account.html">About My Trust Account</a>.</p>
+<p>For more information, go to <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-trust.html">About My Trust Account</a>.</p>
 
 </div>
 
