--- a/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html
+++ b/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html
@@ -453,7 +453,7 @@ Confirm my representative's authorization request</h1>
 <p>If you're unable to register for My Business Account, you may contact Business Enquiries at <strong><span class="nowrap">1‑800‑959‑5525</span></strong> for more information.</p>
 <h2><a id="trustee"></a>If you're a trustee of a trust account</h2>
 <p>Your representative can submit authorization requests using Represent a Client and ask you to finalize the request. You must use the Confirm my Representative service in My Trust Account to confirm or deny these requests.&nbsp;</p>
-<p>If you're a primary trustee and you don't have access to My Trust Account, go to <a href="/sign-in-test/en/revenue-agency/services/e-services/represent-a-client/help-trust-account/about-trust-account.html">About My Trust Account</a>.&nbsp;</p>
+<p>If you're a primary trustee and you don't have access to My Trust Account, go to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-trust.html">About My Trust Account</a>.&nbsp;</p>
 <h3>How to access Confirm my Representative in My Trust Account</h3>
 <p>You must be authorized as a trustee in My Trust Account to use the Confirm my Representative service.</p>
 <p>If you're a trustee with online access to the trust account, you can sign in to <a href="/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a> and access your authorization requests in the <strong>Authorized representative(s)</strong> section in My Trust Account.</p>
