--- a/en/revenue-agency/corporate/contact-information.html
+++ b/en/revenue-agency/corporate/contact-information.html
@@ -578,7 +578,7 @@ background-color: #26384a !important
  </div>
  <div class="col-md-4">
  <section>
- <h3 class="h5"> <a href="/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-your-address.html">Change address or details</a> </h3>
+ <h3 class="h5"> <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Change address or details</a> </h3>
  </section>
  </div>
  <div class="col-md-4">
@@ -644,7 +644,7 @@ background-color: #26384a !important
  </div>
  <div class="col-md-4">
  <section>
- <h3 class="h5"> <a href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/a-proof-income-statement-option-print.html">Get a proof of income (option 'C')</a></h3>
+ <h3 class="h5"> <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/gsthstc-payment-dates.html">Get a proof of income (option 'C')</a></h3>
  </section>
  </div>
  <div class="col-md-4">
@@ -676,7 +676,7 @@ background-color: #26384a !important
  </div>
  <div class="col-md-4">
  <section>
- <h3 class="h5"> <a href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/request.html#ccsscds">Get an access code (business)</a> </h3>
+ <h3 class="h5"> <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/gsthstc-payment-dates.html">Get an access code (business)</a> </h3>
  </section>
  </div>
  <div class="col-md-4">
@@ -686,7 +686,7 @@ background-color: #26384a !important
  </div>
  <div class="col-md-4">
  <section>
- <h3 class="h5"> <a href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/efile-electronic-filers/efile-helpdesk-support-t1-returns.html">EFILE Helpdesk</a> </h3>
+ <h3 class="h5"> <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/gsthstc-payment-dates.html">EFILE Helpdesk</a> </h3>
  </section>
  </div>
  <div class="col-md-4">
@@ -696,7 +696,7 @@ background-color: #26384a !important
  </div>
  <div class="col-md-4">
  <section>
- <h3 class="h5"> <a href="/sign-in-test/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">Get a business number (register)</a> </h3>
+ <h3 class="h5"> <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/gsthstc-payment-dates.html">Get a business number (register)</a> </h3>
  </section>
  </div>
  </div>
