--- a/en/revenue-agency/services/tax/representative-authorization/legal-representative.html
+++ b/en/revenue-agency/services/tax/representative-authorization/legal-representative.html
@@ -303,7 +303,7 @@ Legal representative </h1>
 <li>You are appointed as the guardian, trustee or committee by a court</li>
 <li>You are named as the power of attorney</li>
 <li>You are named in a representation agreement</li>
-<li>You are requesting to be recognized as the person who will manage the Canada Revenue Agency&nbsp;(CRA) tax matters for a resident of Quebec; visit <a href="http://www.revenuquebec.ca/en">Revenu Québec</a> for additional information</li>
+<li>You are requesting to be recognized as the person who will manage the Canada Revenue Agency&nbsp;(CRA) tax matters for a resident of Quebec; visit Revenu Québec for additional information</li>
 <li>The <abbr title="Canada Revenue Agency">CRA</abbr> has received a copy of legal documents giving you the authority to be the legal representative for a non-resident tax account</li>
 </ul>
 
