--- a/en/revenue-agency/services/tax/individuals/life-events/doing-taxes-someone-died/represent-deceased.html
+++ b/en/revenue-agency/services/tax/individuals/life-events/doing-taxes-someone-died/represent-deceased.html
@@ -301,7 +301,7 @@
 <h3 id="h_1a">Types of representatives</h3>
 <dl class="dl-horizontal">
 <dt>Legal representative</dt> <dd><p>The legal representative is typically the executor named in the will who will settle the estate. The responsibilities of the legal representative include making sure that tax returns are filed and any balances owing to the CRA are resolved.</p>
-<p>In Québec, you are the legal representative if you are registered as the liquidator of the estate and may have additional administrative duties. Visit Revenu Québec's <a href="https://www.revenuquebec.ca/en/citizens/your-situation/liquidators-of-a-succession-steps-to-follow-after-a-death/" target="_blank">steps to follow after a death</a> for this information.</p>
+<p>In Québec, you are the legal representative if you are registered as the liquidator of the estate and may have additional administrative duties. Visit Revenu Québec's <a href="">steps to follow after a death</a> for this information.</p>
 <p>If you are the legal representative, you must <a href="#h_3">notify the CRA that you are the legal representative</a>.</p>
 <p><a href="#h_1b">Find out what to do if there is no will or executor</a>.</p>
 </dd> <dt>Authorized representative</dt> <dd><p>An authorized representative is someone, such as an accountant or a lawyer, who can view, get information about, and update the tax information for individuals, businesses or trusts.</p>
@@ -351,7 +351,7 @@
 </ul>
 </li>
 </ul>
-<p>If the person who died was a resident of Québec, you may have additional responsibilities with Revenu Québec. Visit Revenu Québec's <a href="https://www.revenuquebec.ca/en/citizens/your-situation/liquidators-of-a-succession-steps-to-follow-after-a-death/" target="_blank">steps to follow after a death</a> for this information.</p>
+<p>If the person who died was a resident of Québec, you may have additional responsibilities with Revenu Québec. Visit Revenu Québec's <a href="">steps to follow after a death</a> for this information.</p>
 
     
 
@@ -472,7 +472,7 @@
 </div>
 <h3>For offline access to tax records (mail, phone, or fax)</h3>
 <div class="row"><div class="col-sm-12"><details><summary>Authorize a representative for offline access</summary><ol>
-<li>Download and complete <a href="/sign-in-test/en/revenue-agency/services/forms-publications/forms/aut-01.html" target="_blank">Form AUT-01, Authorize a Representative for Offline Access</a></li>
+<li>Download and complete <a href="">Form AUT-01, Authorize a Representative for Offline Access</a></li>
 <li>Submit the form, either through:<ul>
 <li>Represent a Client's &quot;Submit documents&quot; service</li>
 <li>By mail or fax&nbsp;to your <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/tax-services-offices-tax-centres.html" target="_blank">tax centre</a></li>
