--- a/en/revenue-agency/services/tax/representative-authorization/how.html
+++ b/en/revenue-agency/services/tax/representative-authorization/how.html
@@ -398,7 +398,7 @@ Authorize a representative: How to give authorization</h1>
             <details>
                 <summary>Slowest way. Mail a form to authorize a representative for offline access only.</summary>
                 <p>Mailing a form will only authorize your representative for access to your tax information over the phone, by mail, by fax, or in person.</p>
-                <p>You must fill in and sign a separate authorization form for each representative. By signing <a href="/sign-in-test/en/revenue-agency/services/forms-publications/forms/aut-01.html">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, you're authorizing the representative to have access to information regarding your accounts by phone, by mail, by fax, and in person. <strong>Note that this does not provide online access</strong>.</p>
+                <p>You must fill in and sign a separate authorization form for each representative. By signing <a href="www.canada.ca">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, you're authorizing the representative to have access to information regarding your accounts by phone, by mail, by fax, and in person. <strong>Note that this does not provide online access</strong>.</p>
                 <p>Send the form to the appropriate <abbr title="Canada Revenue Agency">CRA</abbr> tax centre listed on the form within six&nbsp;months of the date it is signed.</p>
             </details>
         </dd>
