--- a/en/revenue-agency/services/tax/representative-authorization/how.html
+++ b/en/revenue-agency/services/tax/representative-authorization/how.html
@@ -448,7 +448,7 @@ Authorize a representative: How to give authorization</h1>
                 <p>You must fill in and sign a separate authorization form for each representative. By signing an authorization form, you're authorizing the representative to have access to information regarding your accounts by phone, by mail, by fax, and in person. <strong>Note that this does not provide online access</strong>.</p>
                 <p>To authorize a representative to have offline access to your:</p>
                 <ul>
-                    <li>business account information, use <a href="/sign-in-test/en/revenue-agency/services/forms-publications/forms/aut-01.html">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, and mail the form to the appropriate <abbr title="Canada Revenue Agency">CRA</abbr> tax centre listed on the form within <span class="nowrap">six months</span> of the date it is signed</li>
+                    <li>business account information, use <a href="www.canada.ca">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, and mail the form to the appropriate <abbr title="Canada Revenue Agency">CRA</abbr> tax centre listed on the form within <span class="nowrap">six months</span> of the date it is signed</li>
                     <li>selected listed financial institutions with Quebec sales tax account information, use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc7259.html">Form&nbsp;RC7259, Business Consent for Certain Selected Listed Financial Institutions</a>, and mail the form to the <abbr title="Canada Revenue Agency">CRA</abbr> tax centre listed on the form within <span class="nowrap">six months</span> of the date it is signed</li>
                 </ul>
             </details>
@@ -461,7 +461,7 @@ Authorize a representative: How to give authorization</h1>
         <dd>
             <details>
                 <summary>Mail a form to authorize a representative.</summary>
-                <p>You must fill in and sign a separate authorization form for each representative. By signing <a href="/sign-in-test/en/revenue-agency/services/forms-publications/forms/aut-01.html">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, you're authorizing the representative to have access to information regarding your accounts.</p>
+                <p>You must fill in and sign a separate authorization form for each representative. By signing <a href="www.canada.ca">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, you're authorizing the representative to have access to information regarding your accounts.</p>
                 <p>Send the form to the following tax centre within six&nbsp;months of the date it is signed:</p>
                 <p>Sudbury Tax Centre<br>Post Office Box&nbsp;20000, Station&nbsp;A<br>Sudbury&nbsp;ON&nbsp;&nbsp;P3A&nbsp;5C1<br>Canada</p>
             </details>
@@ -470,7 +470,7 @@ Authorize a representative: How to give authorization</h1>
         <dd>
             <details>
                 <summary>Fax a form to authorize a representative.</summary>
-                <p>You must fill in and sign a separate authorization form for each representative. By signing <a href="/sign-in-test/en/revenue-agency/services/forms-publications/forms/aut-01.html">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, you're authorizing the representative to have access to information regarding your accounts.</p>
+                <p>You must fill in and sign a separate authorization form for each representative. By signing <a href="www.canada.ca">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, you're authorizing the representative to have access to information regarding your accounts.</p>
                 <p>Fax the form within six&nbsp;months of the date it is signed to <span class="nowrap">1-705-671-4559</span>.</p>
         </details></dd>
     </dl>
@@ -480,7 +480,7 @@ Authorize a representative: How to give authorization</h1>
         <dt>Online:</dt>
         <dd>
             <p>You can apply for a trust account number online by using the Trust account registration service available on the <abbr title="Canada Revenue Agency">CRA</abbr>'s secure online portals <a href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a>, <a href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a> and <a href="/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>. 
-</p><p><strong>Fastest way</strong>. The primary trustee must log in to Represent a Client and complete the primary trustee registration. The primary trustee can then authorize a representative or additional trustees online, which gives them immediate access to My Trust Account. For more information, go to <a href="/sign-in-test/en/revenue-agency/services/e-services/represent-a-client/help-trust-account/about-trust-account.html">About My Trust Account</a>.</p>
+</p><p><strong>Fastest way</strong>. The primary trustee must log in to Represent a Client and complete the primary trustee registration. The primary trustee can then authorize a representative or additional trustees online, which gives them immediate access to My Trust Account. For more information, go to <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-trust.html">About My Trust Account</a>.</p>
 <p><strong>Second fastest way</strong>. Representatives can submit an authorization request electronically in Represent a Client. The primary trustee needs to be registered for My Trust Account within Represent a Client to use this option.</p>
 <p>After the representative completes the authorization request, <strong>the primary trustee will need to confirm or deny the request in My Trust Account</strong>.</p>
 <p>To learn more about how you can easily and securely authorize and verify new authorization requests, go to 
@@ -491,7 +491,7 @@ Authorize a representative: How to give authorization</h1>
         <dd>
             <p><strong>Slowest way</strong>. Mail a form to authorize a representative for offline access only.</p>
                <p>Mailing a form will only authorize your representative for access to your tax information over the phone, by mail, by fax, or in person.</p>
-                <p>You must fill in and sign a separate authorization form for each representative. By signing <a href="/sign-in-test/en/revenue-agency/services/forms-publications/forms/aut-01.html">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, you're authorizing the representative to have access to information regarding your trust accounts.</p>
+                <p>You must fill in and sign a separate authorization form for each representative. By signing <a href="www.canada.ca">Form&nbsp;AUT-01, Authorize a Representative for Offline Access</a>, you're authorizing the representative to have access to information regarding your trust accounts.</p>
                 <p>Send the form to the appropriate <abbr title="Canada Revenue Agency">CRA</abbr> tax centre listed on the form within six&nbsp;months of the date it is signed.</p>
             
         </dd>
