--- a/en/revenue-agency/services/e-services/cra-login-services/locked-account.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/locked-account.html
@@ -315,7 +315,7 @@
   <h3>Multi-factor authentication (MFA)</h3>
 	<p>Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app. When you sign in to your account, you can update your current MFA settings or enroll in additional MFA options.</p>
 <h3>Choose memorable security questions</h3>
-  <p>You will be asked to choose 5 security questions that will be used validate your identity in different situations, for example, when signing in, if you forget your CRA user ID, or if you sign in from a new device.</p>
+  <p>You will be asked to choose 5 security questions that will be used to validate your identity in different situations, for example, when signing in, if you forget your CRA user ID, or if you sign in from a new device.</p>
   <p>Your answers should be easy for you to remember but hard for others to guess. Answers that can change over time or questions that have more than one answer can be hard to remember.</p>
   <h3>CRA security code</h3>
   <p>Enter your security code carefully.</p>
