--- a/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html
@@ -113,7 +113,7 @@
 		  <li>Represent a Client</li></ul>
  
   
-    <h3>Managing your online banking info</h3>
+    <h3>Managing your online banking credentials</h3>
     <p>To revoke or change your banking user ID or password or manage your banking security questions, you should contact your financial institution for assistance.</p>
     <p>If your bank gives you a new bank card with new numbers, you must <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to register again using the new card number.</p>
 	
