--- a/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html
+++ b/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html
@@ -396,15 +396,18 @@
         <p>Your client will confirm in their CRA account</p>
       </li>
       <li class="cnjnctn-col">
-        <p>You will provide your client's tax information from a recent notice of assessment that was processed at least 6 months ago</p>
+	      <h4 class="mrgn-tp-sm text-muted">For individual accounts only<span class="wb-inv">: Option 2</span></h4>
+        <p>You will provide tax information from a recent notice of assessment that was processed at least 6 months ago</p>
       </li>
 </ul>
-			<li>Add the level of authorization, expiry date, and the program accounts you are requesting access to (if necessary), then <strong>Confirm</strong></li>
+			<li>Add the level of authorization, expiry date, and (for businesses only) the program accounts you are requesting access to, then <strong>Confirm</strong></li>
+			      <li>If required, submit a signature page</li>
 	    </ol></li>
 		       
               <li>
-                <h3>Wait for your client to confirm (if you chose this method)</h3>
-                <p>Most clients will need to sign in to their account and confirm your request within 10 business days.</p> 
+                <h3>Wait for your authorization request to be activated</h3>
+                <p>Your client may need to sign in to their account and confirm your request within 10 business days. In some cases, the CRA will validate with a confirmation call.</p> 
+		      <p>If you chose to provide tax information for an individual client, there is no waiting period for confirmation of authorization.</p>
 			<p>If your client is a primary trustee, they must sign into their RAC account to access their Trust account and confirm your request there.</p>
 		      <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html">Confirm my representative's authorization request</a></p>
 		   <!--   <details><summary>Alternative method for an individual account</summary>
